增加全文索引支持

--- a/css/index.css
+++ b/css/index.css
@@ -29,3 +29,8 @@ table th {
     min-width: 5em;
     text-align: center;
 }
+
+.footer div>span {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+}
